--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,9 @@ jobs:
 
       - run: npm ci
 
+      - name: Generate TS protobuf
+        run: npm run generate
+
       - name: Bump patch version
         run: npm version patch --no-git-tag-version
 
