--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "generate": "npx protoc -I ./proto ./proto/*.proto --ts_proto_out=./gen --ts_proto_opt=nestJs,package=omit"
+    "generate": "npx protoc -I ./proto ./proto/*.proto --ts_proto_out=./gen --ts_proto_opt=nestJs=true,package=omit"
   },
   "type": "module",
   "publishConfig": {
@@ -11,11 +11,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/T-nix/prettier.git"
+    "url": "git+https://github.com/T-nix/contracts.git"
   },
   "license": "ISC",
   "devDependencies": {
     "grpc-tools": "^1.13.1",
     "ts-proto": "^2.11.0"
-  }
+  },
+  "dependencies": {
+    "@nestjs/microservices": "^11.1.12",
+    "rxjs": "^7.8.2"
+  },
+  "files": [
+    "proto", 
+    "gen"
+  ]
 }
