--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "emitDeclarationOnly": false,
     "experimentalDecorators": true,
-    "outDir": "./dist",
+    "outDir": "./gen",
     "module": "CommonJS",
     "target": "ES2017",
     "strict": true,
