--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@t-nix/contracts",
   "version": "1.0.1",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsc -p tsconfig.build.json",
     "generate": "npx protoc -I ./proto ./proto/*.proto --ts_proto_out=./gen --ts_proto_opt=nestJs=true,package=omit"
   },
   "type": "module",
@@ -20,9 +22,13 @@
   },
   "dependencies": {
     "@nestjs/microservices": "^11.1.12",
-    "rxjs": "^7.8.2"
+    "@t-nix/prettier": "^1.0.5",
+    "@types/node": "^25.0.9",
+    "rxjs": "^7.8.2",
+    "typescript": "^5.9.3"
   },
   "files": [
+    "dist",
     "proto",
     "gen"
   ]
