--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "emitDeclarationOnly": false,
-    "experimentalDecorators": true,
-    "outDir": "./gen",
-    "module": "CommonJS",
-    "target": "ES2017",
+    "module": "commonjs",
+    "target": "es2024",
     "strict": true,
-    "esModuleInterop": true
-  },
-  "include": ["src/**/*"]
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": true
+  }
 }
