--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ts-proto": "^2.11.0"
   },
   "dependencies": {
+    "@nestjs/config": "^4.0.3",
     "@nestjs/microservices": "^11.1.12",
     "@t-nix/prettier": "^1.0.5",
     "@types/node": "^25.0.9",
