--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "express": "^5.2.1",
     "grpc-tools": "^1.13.1",
     "ts-proto": "^2.11.0"
   },
