--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@t-nix/contracts",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "grpc-tools": "^1.13.1",
     "ts-proto": "^2.11.0"
   },
@@ -25,8 +26,8 @@
     "@nestjs/microservices": "^11.1.12",
     "@t-nix/prettier": "^1.0.5",
     "@types/node": "^25.0.9",
-    "rxjs": "^7.8.2",
     "express": "^5.2.1",
+    "rxjs": "^7.8.2",
     "typescript": "^5.9.3"
   },
   "files": [
