--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json && copyfiles proto/* dist/",
     "generate": "npx protoc -I ./proto ./proto/*.proto --ts_proto_out=./gen --ts_proto_opt=nestJs=true,package=omit"
   },
   "type": "commonjs",
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "copyfiles": "^2.4.1",
     "grpc-tools": "^1.13.1",
     "ts-proto": "^2.11.0"
   },
