--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,6 @@
     "declaration": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "gen/**/*"],
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
